<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.relferreira.myappportifolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/main_title_text"
                android:text="@string/main_title"/>

            <Button
                android:id="@+id/btn_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_popular_movies"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_stock_hawk"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_build_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_build_bigger"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_make_your_app_material"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_ubiquitous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_go_ubiquitous"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_capstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_capstone"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
